# docs_repo

./: .gitignore  CHANGELOG.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README-PYPI.md  README.md  analyze_content.py  annotated_toc.md  basic_toc.md  clean_toc.md  comprehensive_toc.md  cross_ref_toc.md  example_annotations.json  example_doc_generator.py  pyproject.toml  requirements.txt  setup.py  test_content_system.py  test_enhanced_author_detection.py  test_enhanced_generator_detection.py  test_external_deployment.py  test_navigation_links.py  test_russian_navigation.py  test_specification_compliance.py  toc.json
.devcontainer/: devcontainer.json
content/: Content.json  Description_for_agents.md
docs/: CHANGELOG.md  README (1).md  README (2).md  README (3).md  README (4).md  README (5).md  README.md  authentication.md  auto_trigger_guide.md  companies.md  deployment_guide.md  development-plan.md  index.md  industries-classification (1).md  industries-classification (2).md  industries-classification.md  job-directory.md  logging.md  manifest_digital_twins.md  manifest_documentation.md  manifest_ethics_ai_moderation.md  manifest_international_standards.md  manifest_knowledge_management.md  manifest_scalability_reuse.md  manifest_security.md  manifest_testing.md  manifest_ui_design.md  manifest_versioning.md  mcp-integration.md  overview.md  security.md  service-design.md  setup.md  technical-specification.md  technical_specification.md  technology-stack.md  testing.md  users.md
scripts/: build_and_publish.sh
tests/: test_cli.py  test_core.py  (+1 more)
(+11 files in other folders)
